# teltools

./: Cargo.toml  LICENSE  NOTICE  README.md
src/: lib.rs
src/text/: hin.txt  in.txt  tel.txt
